Вторая часть - Готова

--- a/LabWork12/LabWork12_v1.csproj
+++ b/LabWork12/LabWork12_v1.csproj
@@ -50,8 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BiList.cs" />
-    <Compile Include="HTTable.cs" />
-    <Compile Include="LPoint.cs" />
+    <Compile Include="HashTable.cs" />
+    <Compile Include="HPoint.cs" />
     <Compile Include="MonoList.cs" />
     <Compile Include="PointBiList.cs" />
     <Compile Include="Program.cs" />
