--- a/LabWork12/LabWork12_v1.csproj
+++ b/LabWork12/LabWork12_v1.csproj
@@ -53,9 +53,11 @@
     <Compile Include="HashTable.cs" />
     <Compile Include="HPoint.cs" />
     <Compile Include="MonoList.cs" />
+    <Compile Include="MyTree.cs" />
     <Compile Include="PointBiList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreePoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
