--- a/LabWork12/LabWork12_v1.csproj
+++ b/LabWork12/LabWork12_v1.csproj
@@ -64,5 +64,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
